# exchange_parser

./: Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
app/: __init__.py  application.py
app/config/: __init__.py  config.py
app/controllers/: __init__.py  bot_controller.py  controller_aggregator.py  data_controller.py  queue_controller.py
app/parsers/: __init__.py  aggregate_distributor.py
app/parsers/api/: __init__.py  base.py  binance.py
app/parsers/distributors/: __init__.py  base.py  binance.py
app/parsers/ws/: __init__.py  base.py  binance.py
app/services/: __init__.py  logger.py  validators.py
app/tg_bot/: __init__.py  bot.py
app/tg_bot/middlewares/: __init__.py  autentification.py
app/tg_bot/routers/: __init__.py  actions.py  commands.py
app/tg_bot/senders/: __init__.py  notifier.py  reject_access.py
app/tg_bot/services/: __init__.py
app/tg_bot/services/kb_builders/: __init__.py  inline_kb.py  reply_kb.py
app/utils/: __init__.py  utils.py
database/: __init__.py  pg_connector.py
database/models/: __init__.py  balances.py  base.py  currencies.py  exchanges.py  pairs.py  transactions.py  users.py
database/repository/: __init__.py  aggregator.py  balances.py  base.py  currencies.py  exchanges.py  pairs.py  transactions.py  users.py
redis_client/: __init__.py  connector.py  storage.txt
redis_client/cache/: redis_cache.py
redis_client/queue/: __init__.py  consumer.py  producer.py
